# Bambuino

./: .clang-format  CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32-s3-devkitc-1
include/: display_driver.h  pid_controller.h  tft_config.h
include/hardware/: hardware_control.h
include/sensor_manager/: sensor_manager.h
include/ui_manager/: ui_manager.h
src/: CMakeLists.txt  display_driver.cpp  main.cpp  pid_controller.cpp
src/hardware/: hardware_control.cpp
src/sensor_manager/: sensor_manager.cpp
src/ui_manager/: CMakeLists.txt  main_ui.slint  ui_manager.cpp
